--- a/package.json
+++ b/package.json
@@ -9,11 +9,45 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/blur": "^4.3.0",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@rneui/themed": "^4.0.0-rc.7",
+    "@shopify/react-native-skia": "0.1.172",
+    "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.11",
+    "expo-blur": "~12.2.2",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-location": "~15.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "expo-svg-uri": "^1.3.1",
+    "formik": "^2.2.9",
+    "patch-package": "^6.5.1",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "0.71.6",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-maps": "^1.6.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.1.2",
+    "react-native-popup-menu": "^0.16.1",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-safearea-height": "^1.0.6",
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.1",
+    "react-redux": "^8.0.5",
+    "twrnc": "^3.6.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
