--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-dotenv": "^3.4.8",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.6.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.1.2",
-    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-safearea-height": "^1.0.6",
