--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-status-bar": "~1.4.4",
     "expo-svg-uri": "^1.3.1",
     "formik": "^2.2.9",
+    "lottie-react-native": "5.1.4",
     "patch-package": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.71.6",
@@ -44,9 +45,11 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-safearea-height": "^1.0.6",
+    "react-native-spinkit": "^1.5.1",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-redux": "^8.0.5",
+    "socket.io-client": "^4.6.1",
     "twrnc": "^3.6.0",
     "yup": "^1.1.1"
   },
